--- a/traffic-sign-classification-with-keras.ipynb
+++ b/traffic-sign-classification-with-keras.ipynb
@@ -26,11 +26,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training and Test data downloaded.\n"
+     ]
+    }
+   ],
    "source": [
     "from urllib.request import urlretrieve\n",
     "from os.path import isfile\n",
@@ -80,11 +88,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modules loaded.\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "import numpy as np\n",
@@ -108,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {
     "collapsed": false
    },
@@ -117,18 +133,25 @@
     "with open('train.p', 'rb') as f:\n",
     "    data = pickle.load(f)\n",
     "\n",
-    "# TODO: Load the feature data to the variable X_train\n",
-    "\n",
-    "# TODO: Load the label data to the variable y_train\n"
+    "X_train = data['features']\n",
+    "y_train = data['labels']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests passed.\n"
+     ]
+    }
+   ],
    "source": [
     "# STOP: Do not change the tests below. Your implementation should pass these tests. \n",
     "assert np.array_equal(X_train, data['features']), 'X_train not set to data[\\'features\\'].'\n",
@@ -152,22 +175,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# TODO: Shuffle the data"
+    "from sklearn.utils import shuffle\n",
+    "X_train, y_train = shuffle(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests passed.\n"
+     ]
+    }
+   ],
    "source": [
     "# STOP: Do not change the tests below. Your implementation should pass these tests. \n",
     "assert X_train.shape == data['features'].shape, 'X_train has changed shape. The shape shouldn\\'t change when shuffling.'\n",
@@ -187,22 +219,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "39209"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# TODO: Normalize the data features to the variable X_normalized"
+    "# TODO: Normalize the data features to the variable X_normalized\n",
+    "import cv2 as cv\n",
+    "\n",
+    "X_normalized = []\n",
+    "for i in range(len(X_train)):\n",
+    "    current_image = cv.normalize(X_train[2].astype('float'), None , -0.5, 0.5, cv.NORM_MINMAX)\n",
+    "    X_normalized.append(current_image)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests passed.\n"
+     ]
+    }
+   ],
    "source": [
     "# STOP: Do not change the tests below. Your implementation should pass these tests. \n",
     "assert math.isclose(np.min(X_normalized), -0.5, abs_tol=1e-5) and math.isclose(np.max(X_normalized), 0.5, abs_tol=1e-5), 'The range of the training data is: {} to {}.  It must be -0.5 to 0.5'.format(np.min(X_normalized), np.max(X_normalized))\n",
@@ -219,22 +277,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# TODO: One Hot encode the labels to the variable y_one_hot"
+    "# TODO: One Hot encode the labels to the variable y_one_hot\n",
+    "from sklearn import preprocessing\n",
+    "lb = preprocessing.LabelBinarizer()\n",
+    "lb.fit(y_train)\n",
+    "y_one_hot = lb.transform(y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests passed.\n"
+     ]
+    }
+   ],
    "source": [
     "# STOP: Do not change the tests below. Your implementation should pass these tests. \n",
     "import collections\n",
@@ -307,24 +377,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "from keras.models import Sequential\n",
+    "from keras.layers.core import Dense, Activation, Flatten\n",
+    "\n",
     "model = Sequential()\n",
-    "# TODO: Build a Multi-layer feedforward neural network with Keras here."
+    "# TODO: Build a Multi-layer feedforward neural network with Keras here.\n",
+    "\n",
+    "# 1st Layer - Add a flatten layer\n",
+    "model.add(Flatten(input_shape=(32, 32, 3)))\n",
+    "\n",
+    "# 2nd Layer - Add a fully connected layer\n",
+    "model.add(Dense(128))\n",
+    "\n",
+    "# 3rd Layer - Add a ReLU activation layer\n",
+    "model.add(Activation('relu'))\n",
+    "\n",
+    "# 4th Layer - Add a fully connected layer\n",
+    "model.add(Dense(43))\n",
+    "\n",
+    "# 5th Layer - Add a ReLU activation layer\n",
+    "model.add(Activation('softmax'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests passed.\n"
+     ]
+    }
+   ],
    "source": [
     "# STOP: Do not change the tests below. Your implementation should pass these tests.\n",
     "from keras.layers.core import Dense, Activation, Flatten\n",
@@ -627,7 +722,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
