--- a/traffic-sign-classification-with-keras.ipynb
+++ b/traffic-sign-classification-with-keras.ipynb
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -869,7 +869,7 @@
      "output_type": "stream",
      "text": [
       "12630/12630 [==============================] - 5s     \n",
-      "Test score: [0.65169716228687469, 0.82470308784823143]\n"
+      "acc: 90.57%\n"
      ]
     }
    ],
